[package]
name = "disthashtable"
version = "0.1.0"
authors = ["Charles Inwald <cci219@lehigh.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10" #For parsing command line arguments
config = "0.10.1" #For config files
bincode = "1.2.1"
serde_derive = "1.0.27"
serde = "1.0.63"
crossbeam = "0.7.3"

[profile.release]
debug = true