[package]
name = "client"
version = "0.1.0"
authors = ["Charles Inwald"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#config = "0.10.1" #For config files
bincode = "1.2.1"
serde_derive = "1.0.27"
serde = "1.0.63"
structopt = "0.2.10" #For parsing command line arguments

[profile.release]
debug = true